--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -57,6 +57,10 @@ on init
     write /sys/block/sde/queue/read_ahead_kb 2048
     write /sys/block/sde/queue/nr_requests 256
 
+    # report max frequency to unity tasks.
+    write /proc/sys/kernel/sched_lib_name "UnityMain,libunity.so"
+    write /proc/sys/kernel/sched_lib_mask_force 255
+
 on fs
     mount_all --early /vendor/etc/fstab.qcom
 
