sm6150-common: fingerprint: Setup more fpc1020 nodes
 * these nodes are used by surya

--- a/fingerprint/android.hardware.biometrics.fingerprint@2.1-service.xiaomi_sm6150.rc
+++ b/fingerprint/android.hardware.biometrics.fingerprint@2.1-service.xiaomi_sm6150.rc
@@ -2,6 +2,8 @@ on init
     chown system system /dev/goodix_fp
 
 on boot
+    chown system system /sys/bus/platform/devices/soc/soc:fpc1020/fingerdown_wait
+    chown system system /sys/bus/platform/devices/soc/soc:fpc1020/hw_reset
     chown system system /sys/bus/platform/devices/soc/soc:fpc1020/irq
     chown system system /sys/bus/platform/devices/soc/soc:fpc1020/wakeup_enable
 
