--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -112,6 +112,10 @@ on property:sys.boot_completed=1
     write /sys/class/drm/card0/device/idle_encoder_mask 1
     write /sys/class/drm/card0/device/idle_timeout_ms 100
 
+    # Restrict permissions to socket file 
+    # to hide Magisk & co.
+    chmod 440 /proc/net/unix
+
 service vendor.pd_mapper /vendor/bin/pd-mapper
     class core
     user system
